# poop

./: poop.txt
internal_tools/support/code_gen/cgs/: CodeGenSimplifier.cabal
internal_tools/support/code_gen/cgs/src/: CodeGenSimplifier.hs  Main.hs  NumeralSystem.hs  Simplifier.hs  Token.hs
internal_tools/support/code_gen/cgs/src/C/: Lexer.hs  Show.hs
internal_tools/support/code_gen/cgs/src/C/Lexer/: Compile.hs
internal_tools/support/code_gen/cgs/src/CodeGenSimplifier/: Help.hs  OptionHelp.hs  Options.hs
internal_tools/support/code_gen/cgs/src/Control/DeepSeq/: Instances.hs
internal_tools/support/code_gen/cgs/src/Data/: Depth.hs  FilePrototype.hs  Point.hs  Represent.hs  Scope.hs  WildString.hs
internal_tools/support/code_gen/cgs/src/Data/Function/: Extra.hs
internal_tools/support/code_gen/cgs/src/Data/List/: Extra.hs
internal_tools/support/code_gen/cgs/src/Data/Tuple/: Map.hs
internal_tools/support/code_gen/cgs/src/Hoops/: HC.hs  Key.hs  Quote.hs  SegPath.hs
internal_tools/support/code_gen/cgs/src/Hoops/HC/: View.hs
internal_tools/support/code_gen/cgs/src/Simplifier/: CGComment.hs  Database.hs  Externalize.hs  Keys.hs  Matrix.hs  Nop.hs  SimplifyHeader.hs  UserData.hs
internal_tools/support/code_gen/cgs/src/Simplifier/Externalize/: Camera.hs  Cylinder.hs  FaceNormals.hs  PolyCylinder.hs  Polygon.hs  Polyline.hs  Shell.hs  ShellByTristrips.hs  VertexColorsByFIndex.hs  VertexNormals.hs  View.hs
internal_tools/support/code_gen/cgs/src/Token/: Directive.hs  GenToken.hs  Keyword.hs  Number.hs  String.hs  ToCppCode.hs
(+53 files in other folders)
